--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+    <div class="header-img">
+        <p> Lorem ipsum dolor sit amet. </p>
         <nav>
             <h3 class="nav-title"> Ma<span style="color: #FD6E0A;">r</span>y </h3>
             <ul>
@@ -21,6 +23,25 @@
                 <li><a href=""> <button class="btn-orange"> Hire Me </button></a></li>
             </ul>
         </nav>
+        <div class="top-banner">
+            <div class="banner-content">
+                <h3 class="content-subtitle color-dark2">
+                    Hi, I am
+                </h3>
+                <h1 class="content-title">
+                    Mary Hardy 
+                </h1>
+                <p class="content-txt">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn-orange btn-dwn-cv"> Download CV </button>
+                <button class="btn-white"> Contact </button>
+            </div>
+            <div class="banner-img">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </div>
+    </div>
     </header>
 </body>
 </html>
