--- a/index.html
+++ b/index.html
@@ -43,5 +43,10 @@
         </div>
     </div>
     </header>
+    <main>
+        <section class="about">
+            
+        </section>
+    </main>
 </body>
 </html>
