--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style/styles.css">
 </head>
 <body>
-    <header class="header">
+    <header class="bg-color">
     <div class="header-img">
         <p> Lorem ipsum dolor sit amet. </p>
         <nav>
@@ -44,8 +44,27 @@
     </div>
     </header>
     <main>
-        <section class="about">
-            
+        <section class="about bg-color">
+            <h3 class="about-title center"> About Me </h3>
+            <p class="about-paragraph center"> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata. </p>
+            <div class="about-contents center">
+                <div class="about-item">
+                    <p class="item-title">Name</p>
+                    <p class="item-txt">Mardy Hardy</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Email:</p>
+                    <p class="item-txt">info@gmail.com</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">Date Of Birth</p>
+                    <p class="item-txt">11 September 2003</p>
+                </div>
+                <div class="about-item">
+                    <p class="item-title">From</p>
+                    <p class="item-txt">Dhaka</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
