--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main>
         <section class="about bg-color">
             <h3 class="about-title center"> About Me </h3>
-            <p class="about-paragraph center"> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata. </p>
+            <p class="about-paragraph center"> I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and <br> slick websites that provide real value to the end user. Thousands of clients have procured <br> exceptional resulfs while working with me. Delivering work within time and budget which meets <br> clients requirements in our mata. </p>
             <div class="about-contents center">
                 <div class="about-item">
                     <p class="item-title">Name</p>
@@ -65,6 +65,38 @@
                     <p class="item-txt">Dhaka</p>
                 </div>
             </div>
+        </section>
+        <section class="skill">
+            <h1 class="about-title center"> What I Do </h1>
+            <p class="about-paragraph center"> I have more than 10 years experience building software for clients all over the world. Below is a quick <br> overview of my main technical skill sets and technologies i use. Want to find out more about my experience? <br> Check out my online resume and project portfolio. </p>
+
+            <div class="skill-lists">
+                <div class="skill-box">
+                    <img src="icons/js.png" alt="" class="skill-logo">
+                    <h1 class="skill-name"> Vanilla Javascript </h1>
+                    <p class="skill-description"> List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae soluta ex perferendis a quibusdam non cum corporis dignissimos provident quae!  </p>
+                </div>
+                <div class="skill-box">
+                    <img src="icons/react.png" alt="" class="skill-logo">
+                    <h1 class="skill-name"> React </h1>
+                    <p class="skill-description"> List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio magnam odio voluptatum doloribus dignissimos quaerat iusto inventore repellat repellendus facilis! </p>
+                </div>
+                <div class="skill-box">
+                    <img src="icons/nodejs.png" alt="" class="skill-logo">
+                    <h1 class="skill-name"> Node.js </h1>
+                    <p class="skill-description"> List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sapiente ipsa dolore necessitatibus omnis ab aliquid velit odio cum accusamus? </p>
+                </div>
+                <div class="skill-box">
+                    <img src="icons/mongo.png" alt="" class="skill-logo">
+                    <h1 class="skill-name"> MongoDB </h1>
+                    <p class="skill-description"> List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum dolores optio iure! Beatae, neque? Blanditiis vel vero iure hic rerum. Lorem, ipsum dolor. </p>
+                </div>
+            </div>
+        </section>
+        <section class="resume">
+            <h1 class="about-title center">
+                A Summary Of My Resume
+            </h1>
         </section>
     </main>
 </body>
