--- a/index.html
+++ b/index.html
@@ -94,9 +94,61 @@
             </div>
         </section>
         <section class="resume">
-            <h1 class="about-title center">
+            <h1 class="about-title center" style="margin-bottom: 113px;">
                 A Summary Of My Resume
             </h1>
+            <section class="resume-content">
+                <div class="column">
+                    <h1 class="column-title">
+                        My Education
+                    </h1>
+                    <div class="column-part">
+                        <h1 class="part-title">Master In Computer Engineering</h1>
+                        <p class="part-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div> <hr>
+                    <div class="column-part">
+                        <h1 class="part-title">Master In Computer Engineering</h1>
+                        <p class="part-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div> <hr>
+                    <div class="column-part">
+                        <h1 class="part-title">Master In Computer Engineering</h1>
+                        <p class="part-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+
+                <div class="column2">
+                    <h1 class="column-title">
+                        My Experience 
+                    </h1>
+                    <div class="column-part">
+                        <h1 class="part-title">Sr. Font End Developer</h1>
+                        <p class="part-subtitle">Apple Inc / 2020 - Current </p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div> <hr>
+                    <div class="column-part">
+                        <h1 class="part-title">Jr. Font End Developer </h1>
+                        <p class="part-subtitle"> Dribble Inc / 2018 - 2022 </p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div> <hr>
+                    <div class="column-part">
+                        <h1 class="part-title"> Html Developer </h1>
+                        <p class="part-subtitle"> Adobe Inc / 2017 - 2018</p>
+                        <p class="part-text">List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    </div>
+                </div>
+            </section>
+            <span class="btn-resume-cont">
+                <button class="btn-resume"> Download CV </button>
+            </span>
         </section>
     </main>
 </body>
