--- a/index.html
+++ b/index.html
@@ -150,6 +150,40 @@
                 <button class="btn-resume"> Download CV </button>
             </span>
         </section>
+        <footer class="footer bg-color">
+            <div class="left-side">
+                <h1 class="footer-title">
+                    Lets Connect
+                </h1>
+                <p class="footer-txt">
+                    Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.
+                </p>
+                <div class="footer-icons">
+                    <a href="https:facebook.com/tajizoon"><img src="icons/facebook.png" alt="fb"></a>
+                    <a href="https:www.x.com/tajizoon"><img src="icons/twitter.png" alt="twitter"></a>
+                    <a href="https:www.instagram.com/tajizoon"><img src="icons/insta.png" alt="insta"></a>
+                </div>
+            </div>
+            <div class="right-side">
+                <h1 class="footer-title" style="margin-bottom: 28px;">
+                    Let's Message Me 
+                </h1>
+                <form action="">
+                    <label for="name">
+                        <input type="text" name="name" id="name" placeholder="Your Name" class="form-box">
+                    </label> <br>
+                    <label for="name">
+                        <input type="email" name="name" id="name" placeholder="Your email" class="form-box">
+                    </label> <br>
+                    <label for="area">
+                        <textarea name="area" id="area" placeholder="Message" class="textarea"></textarea>
+                    </label> <br>
+                    <label for="submit">
+                        <input type="submit" name="submit" id="submit" class="btn-orange">
+                    </label>
+                </form>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
