--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
                     </label> <br>
                     <label for="submit">
                         <input type="submit" name="submit" id="submit" class="btn-orange">
+                    </label> &nbsp; &nbsp;
+                    <label for="reset">
+                        <input type="reset" name="reset" id="reset" class="btn-white">
                     </label>
                 </form>
             </div>
