--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         }
     </style>
     <link rel="stylesheet" href="style/styles.css">
+    <script src="https://kit.fontawesome.com/8fc118f930.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="bg-color">
@@ -34,8 +35,8 @@
                 <p class="content-txt">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
                 </p>
-                <button class="btn-orange btn-dwn-cv"> Download CV </button>
-                <button class="btn-white"> Contact </button>
+                <button class="btn-orange btn-dwn-cv"> <i class="fa-solid fa-download"></i> Download CV </button>
+                <button class="btn-white"> <i class="fa-solid fa-phone"></i>&nbsp; Contact </button>
             </div>
             <div class="banner-img">
                 <img src="images/hardy.png" alt="">
@@ -147,7 +148,7 @@
                 </div>
             </section>
             <span class="btn-resume-cont">
-                <button class="btn-resume"> Download CV </button>
+                <button class="btn-resume"> <i class="fa-solid fa-download"></i> Download CV </button>
             </span>
         </section>
         <footer class="footer bg-color">
